--- a/roadscape/HomeViewController.storyboard
+++ b/roadscape/HomeViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uLb-ey-omU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uLb-ey-omU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,9 +34,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u8B-A9-gCO">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u8B-A9-gCO">
                                 <rect key="frame" x="0.0" y="64" width="375" height="518"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bio-FY-Qut">
                                     <size key="itemSize" width="50" height="50"/>
@@ -55,16 +54,27 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PTN-0S-pzL">
-                                <rect key="frame" x="164" y="610" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PTN-0S-pzL">
+                                <rect key="frame" x="138" y="610" width="99" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="A0J-np-gVr"/>
+                                    <constraint firstAttribute="height" constant="30" id="DYw-o4-bjM"/>
+                                </constraints>
+                                <state key="normal" title="＋"/>
                                 <connections>
                                     <action selector="didTouchButton:" destination="6uQ-lf-q3J" eventType="touchUpInside" id="9Kf-IX-gC3"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.77248623704663211" green="0.77248623704663211" blue="0.77248623704663211" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="u8B-A9-gCO" firstAttribute="trailing" secondItem="qpJ-zQ-gW8" secondAttribute="trailing" id="3oW-n1-1CU"/>
+                            <constraint firstItem="PTN-0S-pzL" firstAttribute="top" secondItem="u8B-A9-gCO" secondAttribute="bottom" constant="28" id="S3d-Ff-PyM"/>
+                            <constraint firstItem="u8B-A9-gCO" firstAttribute="top" secondItem="qpJ-zQ-gW8" secondAttribute="top" id="TvB-1m-epJ"/>
+                            <constraint firstItem="u8B-A9-gCO" firstAttribute="leading" secondItem="qpJ-zQ-gW8" secondAttribute="leading" id="UlD-Vl-z24"/>
+                            <constraint firstItem="PTN-0S-pzL" firstAttribute="centerX" secondItem="Ww4-7r-WEr" secondAttribute="centerX" id="X0K-7W-ysK"/>
+                            <constraint firstItem="qpJ-zQ-gW8" firstAttribute="bottom" secondItem="PTN-0S-pzL" secondAttribute="bottom" constant="27" id="cZW-zO-GRq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qpJ-zQ-gW8"/>
                     </view>
                     <navigationItem key="navigationItem" id="Scc-w4-fab"/>
